fix modal scrollbars showing on IE

--- a/packages/heartwood-components/public/stylesheets/global.css
+++ b/packages/heartwood-components/public/stylesheets/global.css
@@ -2901,7 +2901,7 @@ select:-webkit-autofill:focus {
 
 .modal-body {
   padding: 1rem;
-  overflow: scroll; }
+  overflow-y: auto; }
 
 .modal-overlay {
   position: fixed;
@@ -2919,7 +2919,7 @@ select:-webkit-autofill:focus {
     left: 0;
     width: 100%;
     max-height: 100%;
-    overflow: scroll; }
+    overflow-y: auto; }
     .modal-overlay .modal.modal-small {
       max-width: 30rem;
       left: 50%;
